# shoot-pro-app

./: .gitignore  .replit  Shooting.html  github_instructions.md  main.py  pasted_text_1725915022899.txt  pasted_text_1725915642295.txt  pasted_text_1725916315466.txt  pyproject.toml  users.db  view_data.py
.github/workflows/: deploy.yml
static/css/: styles.css
static/js/: scripts.js
templates/: app.html  base.html  landing.html  payment.html  signin.html  subscription.html
