[tool.poetry]
name = "repl-nix-shootproapp"
version = "0.1.0"
description = ""
authors = ["Techshooting.com"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"
stripe = "^10.10.0"
starlette = "^0.38.4"
httpx = "^0.27.2"
git-filter-repo = "^2.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
